@@ -1,5 +1,10 @@
 2007-02-12	Benedikt Meurer <benny@xfce.org>
 
+	* configure.in.in, exo/exo-mount-point.c: Fix compilation on newer
+	  NetBSD versions. Bug #2808.
+
+2007-02-12	Benedikt Meurer <benny@xfce.org>
+
 	* exo-helper/helpers/sylpheed-claws.desktop.in.in: Apply patch from
 	  Colin Leroy <colin@colino.net> to replace Sylpheed-Claws with Claws
 	  Mail. Bug #2851.
